# BATTLE2

./: .env  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  _introspect_pygame_renderer.py  _probe_renderer.py  agents.json  changes.diff  cli_main.patch  git-clean-branches.sh  pull.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_match_results.txt  start.ps1  sync.sh  sync_win.cmd  sync_win.ps1  testing1.py  tree.compare  tree.txt
.github/ISSUE_TEMPLATE/: function_task.md
.github/workflows/: ci.yml
_legacy/: main.py
_legacy/agents_tooling/: bomber.bin.meta.json  chatgpt-Hunter.bin.meta.json  chatgpt_hunter.asm  chatgpt_hunter.bin.meta.json  claude_agent.asm  claude_hunter.bin.meta.json  replicator.bin.meta.json
_legacy/agents_tooling/examples/: bomber.asm  cloaker.asm  replicator.asm  runner.asm  writer.asm
_legacy/tests/: test_smoke.py
agents/bomber/: agent.yaml
agents/chatgpt_hunter/: agent.yaml
agents/claude_agent/: agent.yaml
agents/example/: agent.yaml
agents/replicator/: agent.yaml
agents_build/: chatgpt_hunter.blob
app/: README.md  agent_designer.py  main.py  match_runner.py  pyproject.toml  replay_viewer.py
app/services/: agent_catalog.py  agent_meta.py  agents.py  engine.py  osutil.py
app/views/: advanced.py  simple.py
app/widgets/: json_editor.py
battle2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
client/src/: renderers.py
client/src/battle_client/: cli.py  utils.py
client/src/battle_client/renderers/: base.py  headless.py  pygame_canvas.py  pygame_renderer.py
docs/: battle.config.legacy.json
docs/specs/: discover_agents.md  resolve_agent.md  run_match_pmars.md
engine/src/: agents.py
engine/src/battle_engine/: _entry.py  agents.py  cli.py  core.py
engine/src/battle_engine/builtins/: __init__.py  registry.py
engine/src/builtins/: registry.py
examples/: examples_readme.txt
prompts/templates/: function_impl.prompt.md  test_fix.prompt.md
runs/_loose/: replay.jsonl
runs/results/cgpt-vs-claude-20250929-092026/: summary.csv
runs/results/cgpt-vs-claude-20250929-092026/seed-1/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-1/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-10/A/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-10/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-2/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-2/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-3/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-3/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-4/A/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-4/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-5/A/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-5/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-6/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-6/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-7/A/: cmd.txt
runs/results/cgpt-vs-claude-20250929-092026/seed-7/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-8/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-8/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-9/A/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-092026/seed-9/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-093052/: leaderboard.txt
runs/results/cgpt-vs-claude-20250929-093052/seed-1/A/: cmd.txt  replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-1/B/: replay.jsonl  summary.json
runs/results/cgpt-vs-claude-20250929-093052/seed-2/B/: cmd.txt  replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-3/A/: cmd.txt
runs/results/cgpt-vs-claude-20250929-093052/seed-3/B/: cmd.txt  replay.jsonl  summary.json
runs/results/cgpt-vs-claude-20250929-093052/seed-4/A/: replay.jsonl  summary.json
runs/results/cgpt-vs-claude-20250929-093052/seed-5/A/: summary.json
runs/results/cgpt-vs-claude-20250929-093052/seed-5/B/: cmd.txt  summary.json
runs/results/cgpt-vs-claude-20250929-093052/seed-6/A/: replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-6/B/: cmd.txt  replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-7/A/: replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-7/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-093052/seed-9/A/: cmd.txt  replay.jsonl
runs/results/cgpt-vs-claude-20250929-093052/seed-9/B/: replay.jsonl
runs/results/cgpt-vs-claude-20250929-094111/: leaderboard.txt  summary.csv
runs/results/cgpt-vs-claude-20250929-094111/seed-1/B/: cmd.txt
runs/results/cgpt-vs-claude-20250929-094111/seed-10/A/: cmd.txt  replay.jsonl  summary.json
runs/results/cgpt-vs-claude-20250929-102133/: summary.csv
runs/results/rr-20250929-104315/: standings.csv
runs/results/smoke-20250929-150321/chatgpt_hunter__vs__runner__seed-1__AB/: agents.json
sdk/examples/: collect_feedback.py
sdk/examples/hunter_feedback_bundle (2)/: README.txt
sdk/examples/hunter_feedback_bundle (2)/configs/: run_notes.txt
sdk/examples/hunter_feedback_bundle (2)/summary/: leaderboard.txt  summary.csv
sdk/tooling/: asm_assembler.py  build.sh  build_wrapper.sh
tools/: agent_designer.spec  build_executables.ps1  build_executables_windows.ps1  build_win.ps1  find_run_match.sh  installer.iss  release.py  replay_viewer.spec  smoke_after_install.ps1  smoke_test.ps1  smoke_test.sh
tournament/: roster.json
tournament/agents_build/: chatgpt_hunter.blob.meta.json  claude_agent.blob.meta.json
tournament/rosters/: default.json  derived.csv
tournament/scripts/: btctl.py  cla-vs-cgpt.sh  round_robin.sh  smoke.sh  test_hunter.sh
warriors/: dwarf.red  imp.red
work/rv/replay_viewer/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  xref-replay_viewer.html
(+361 files in other folders)
